--- a/menu.html
+++ b/menu.html
@@ -1,14 +1,17 @@
 <ul class="nav pt-3 pb-3">
   <li class="nav-item">
-    <a class="nav-link active" href="#">Inicio</a>
+    <a class="nav-link active" href="index.html">Inicio</a>
   </li>
   <li class="nav-item">
-    <a class="nav-link" href="#">Mauro</a>
+    <a class="nav-link" href="mauro.html">Mauro</a>
   </li>
   <li class="nav-item">
-    <a class="nav-link" href="#">Jeniffer</a>
+    <a class="nav-link" href="jennifer.html">Jeniffer</a>
   </li>
   <li class="nav-item">
-    <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
+    <a class="nav-link" href="prueba.html">Prueba</a>
+  </li>
+  <li class="nav-item">
+    <a class="nav-link" href="macarena.html">Macarena</a>
   </li>
 </ul>
